--- a/EmpireProceduralGenerationDemo/EmpireProceduralGenerationDemo.csproj
+++ b/EmpireProceduralGenerationDemo/EmpireProceduralGenerationDemo.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C9D10A8B-15FB-43B7-95CF-5C199AC976FF}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>EmpireProceduralGenerationDemo</RootNamespace>
     <AssemblyName>EmpireProceduralGenerationDemo</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,13 +57,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Grid\Desert.cs" />
-    <Compile Include="Grid\Forest.cs" />
-    <Compile Include="Grid\Grass.cs" />
     <Compile Include="Grid\Grid.cs" />
-    <Compile Include="Grid\Mountain.cs" />
+    <Compile Include="Grid\Modify.cs" />
     <Compile Include="Grid\Tile.cs" />
-    <Compile Include="Grid\Water.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
